--- a/style.css
+++ b/style.css
@@ -1,333 +1,460 @@
 /* Geral */
 
+@font-face {
+  font-family: "Irish Grover";
+  src: url("./fonts/buExpoi6YtLz2QW7LA4flVgv__RP.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   color-scheme: light dark;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    scroll-behavior: smooth;
-    scroll-padding-top: 130px;
-    overflow-x: hidden;
-    font-size: 62.5%;
-    width: 100%;
-    background-color: white;
-    color: black;
+  scroll-behavior: smooth;
+  scroll-padding-top: 130px;
+  overflow-x: hidden;
+  font-size: 62.5%;
+  width: 100%;
+  background-color: white;
+  color: black;
 }
 
 /*Header*/
 
 header {
-    background-image: url(./img/madeira.jpg);
-    width: 100%;
-    height: 15vh;
-    position: fixed;
+  background-image: url(./img/madeira.jpg);
+  width: 100%;
+  height: 15vh;
+  position: fixed;
+  z-index: 999;
 }
 
-.nave {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgba(55, 35, 15, 0.9);
-    width: 100%;
-    height: 15vh;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(55, 35, 15, 0.9);
+  width: 100%;
+  height: 15vh;
 }
 
-.nave img {
-    width: 120px;
+.header-container img {
+  width: 105px;
 }
 
 .logo_link {
-    margin-left: 5%;
+  margin-left: 5%;
 }
 
 nav ul {
-    color: #fff;
-    list-style: none;
-    display: flex;
-    margin-right: 3vw;
-    margin-top: 15px;
+  list-style: none;
+  display: flex;
 }
 
 nav a {
-    margin-right: 30px;
-    font-size: 2.2rem;
-    font-family: "Irish Grover", system-ui;
-    text-decoration: none;
-    color: #fff;
+  margin-right: 30px;
+  font-size: clamp(1.87rem, 2vw, 2.3rem);
+  font-family: "Irish Grover", cursive;
+  text-decoration: none;
+  color: #fff;
 }
 
 nav a:hover {
-    color: #8d5a27;
+  color: #eb9744;
+  transition: color 0.3s ease;
+}
+
+.reserva_but {
+  background-color: #ff8d12;
+  color: black;
+  font-weight: bold;
+  padding: 7px;
+  border-radius: 5px;
+}
+
+.reserva_but:hover {
+  background-color: #ff8d12d8;
+  color: #000;
+  transition: background-color 0.3s ease;
 }
 
 /*Banner*/
 
-.prop {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    padding-top: 10vh;
-    background: url(./img/banner.png) center/cover no-repeat;
-    min-height: 100vh;
-    width: 100%;
+.hero {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding-top: 10vh;
+  background: url(./img/banner.png) center/cover no-repeat;
+  min-height: 100vh;
+  width: 100%;
 }
 
-.prop h1 {
-    font-size: clamp(2rem, 9vw, 12rem);
-    font-family: "Irish Grover", system-ui;
-    color: white;
-    margin-bottom: 50px;
+.hero h1 {
+  font-size: clamp(2rem, 9vw, 12rem);
+  font-family: "Irish Grover", cursive;
+  color: white;
+  margin-bottom: 50px;
 }
 
-.botoes {
-    padding: 10px 20px;
-    font-size: clamp(1.5rem, 6vw, 5rem);
-    background-color: rgba(87, 84, 84, 0.5);
-    color: #fff;
-    border: none;
-    border-radius: 9px;
-    cursor: pointer;
-    text-decoration: none;
+.bt_container {
+  display: flex;
+  justify-content: center;
 }
 
+.bt-main {
+  padding: 10px 20px;
+  font-size: clamp(1.5rem, 5vw, 4rem);
+  background-color: rgba(87, 84, 84, 0.5);
+  color: #fff;
+  border-radius: 9px;
+  text-decoration: none;
+}
 
-.botoes:hover {
-    background-color: #8d5a27;
-    transition: background-color 0.3s ease;
+.bt-main:hover {
+  background-color: #8d5a27;
+  transition: background-color 0.3s ease;
 }
 
 /*Seção sobre*/
 
 .sobre-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    background-color: #cc9b67;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  background-color: #cc9b67;
 }
 
 .sobre-img {
-    width: 35vw;
-    height: auto;
-    border-radius: 12px;
-    padding-right: 5rem;
-
+  width: 35vw;
+  height: auto;
+  border-radius: 12px;
+  padding-right: 5rem;
 }
 
 .sobre-texto h1 {
-    font-size: clamp(3.5rem, 5vw, 6rem);
-    text-align: center;
-    color: #000;
-    margin-bottom: 15px;
-    font-family: "Irish Grover", system-ui;
+  font-size: clamp(3.5rem, 5vw, 5rem);
+  text-align: center;
+  color: #000;
+  margin-bottom: 15px;
+  font-family: "Irish Grover", system-ui;
 }
 
 .sobre-texto p {
-    font-size: clamp(1.7rem, 3vw, 3rem);
-    line-height: 1.6;
-    max-width: 40vw;
-    text-align: center;
-    color: #000;
+  font-size: clamp(1.7rem, 2vw, 2.4rem);
+  line-height: 1.6;
+  max-width: 40vw;
+  text-align: center;
+  color: #000;
 }
 
 /*Seção cardápio*/
 
-
 .cardapio-container {
-    width: 100%;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    background-color: #bd8d5a;
+  width: 100%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  background-color: #bd8d5a;
+}
+
+.cardapio-txt-container {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 .cardapio-texto {
-    margin-top: 30px;
-    margin-bottom: 50px;
-    font-size: 2vw;
-    text-align: center;
-    color: #000;
-    font-family: "Irish Grover", system-ui;
+  width: 80%;
+  margin: 3rem 0 1rem;
+  text-align: center;
+  color: #000;
+  font-family: "Irish Grover", system-ui;
+}
+
+.cardapio-texto h1 {
+  font-size: clamp(3rem, 4vw, 5rem);
+}
+
+.cardapio-texto h2 {
+  padding-top: 20px;
+  font-size: clamp(2rem, 2.7vw, 2.5rem);
+  font-weight: normal;
 }
 
 .item-cardapio {
-    display: flex;
-    max-width: 100vw;
-    width: 65vw;
-    padding-bottom: 20px;
-    margin: 20px auto 30px;
-    align-items: center;
-    gap: 20px;
-    border-bottom: 2px solid black;
+  display: flex;
+  max-width: 100%;
+  width: 75vw;
+  padding-bottom: 20px;
+  margin: 20px auto 30px;
+  align-items: center;
+  gap: 20px;
+  border-bottom: 2px solid black;
 }
 
 .item-cardapio img {
-    object-fit: cover;
-    width: 16.3vw;
-    border-radius: 10px;
-    height: 25.5vh;
-    border: 3px solid rgba(55, 35, 15);
+  object-fit: cover;
+  aspect-ratio: 4 / 3;
+  /*width: 16.3vw;*/
+  width: 35rem;
+  border-radius: 10px;
+  height: 22rem;
+  border: 3px solid rgba(55, 35, 15);
 }
 
 .item-card-txt {
-    width: 80%;
-    padding: 20px;
-    font-size: 2rem;
-    color: black;
+  width: 80%;
+  padding: 20px;
+  color: black;
 }
 
-.item-card-txt h3 {
-    font-size: 3rem;
-    margin-bottom: 20px;
+.item-card-txt h1 {
+  font-size: clamp(1.7rem, 3vw, 3.5rem);
+  margin-bottom: 1rem;
 }
 
 .item-card-txt p {
-    margin-bottom: 20px;
-    line-height: 1.5;
+  margin-bottom: 0.5rem;
+  font-size: clamp(1.4rem, 2vw, 2.4rem);
+  line-height: 1.5;
 }
 
 .preco {
-    font-weight: bold;
-    color: rgb(26, 16, 7);
+  font-size: clamp(1.4rem, 2vw, 2.3rem);
+  font-weight: bold;
+  padding-top: 2rem;
+  color: rgb(26, 16, 7);
+  float: right;
+}
+
+#bolo-de-fuba {
+  border-bottom: none;
+}
+
+/*galeria*/
+
+.galeria-fundo {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(62, 42, 28, 0.8), rgba(0, 0, 0, 0));
+}
+
+.galeria-titulo {
+  text-align: center;
+  font-size: 5rem;
+  font-family: "Irish Grover", cursive;
+  padding-top: 3rem;
+}
+
+.galeria-container {
+  display: flex;
+  position: relative;
+  height: 45vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  scroll-behavior: smooth;
+  margin-bottom: 2rem;
+}
+
+#img-slide-container {
+  display: flex;
+  width: 1075px;
+  height: 100%;
+  justify-content: start;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  align-items: center;
+  scrollbar-width: none;
+  gap: 1.2rem;
+  scroll-behavior: smooth;
+}
+
+.slider-img {
+  flex-shrink: 0;
+  width: 350px;
+  height: 270px;
+  border-radius: 1rem;
+  transition: transform 0.3s ease;
+  scroll-snap-align: center;
+}
+
+.slider-img:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  transform: translateY(-8px);
+}
+
+#prev-button,
+#next-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4a805;
+  border-radius: 50%;
+  width: 3%;
+  height: 14%;
+  font-size: clamp(2rem, 2.5vw, 5rem);
+  border: none;
+  cursor: pointer;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 0.3s ease;
+}
+
+#prev-button:hover,
+#next-button:hover {
+  transform: scale(1.2);
+  text-align: center;
+}
+
+#prev-button {
+  margin-right: 4rem;
+}
+#next-button {
+  margin-left: 4rem;
 }
 
 /*footer*/
 
 footer {
-    width: 100%;
-    min-height: 40vh;
-    background-image: url(./img/madeira.jpg);
+  width: 100%;
+  min-height: 40vh;
+  background-image: url(./img/madeira.jpg);
 }
 
-.item_cont {
-    width: 100%;
-    min-height: 40vh;
-    background-color: rgba(55, 35, 15, 0.9);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 20px;
+.item_container {
+  width: 100%;
+  min-height: 40vh;
+  background-color: rgba(55, 35, 15, 0.9);
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
 .voimg {
-    width: 20rem;
+  width: 20rem;
 }
 
 .redes {
-    color: #fff;
-    display: grid;
-    min-width: 60vw;
-    justify-content: center;
-    text-align: center;
+  color: #fff;
+  display: grid;
+  min-width: 60vw;
+  justify-content: center;
+  text-align: center;
+}
+
+.horario {
+  margin-bottom: 2rem;
+}
+
+.horario_txt {
+  font-size: clamp(3rem, 4vw, 5rem);
+  padding-bottom: 1rem;
+}
+
+.horario p {
+  font-size: clamp(1.5rem, 1.5vw, 2rem);
 }
 
 .icone {
-    display: flex;
+  display: flex;
+  justify-content: center;
+  margin-top: 3px;
 }
 
 .redes a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-    text-decoration: none;
-    background-color: #f8a751;
-    margin: 10px;
-    padding: 10px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  text-decoration: none;
+  background-color: #f8a751;
+  margin: 10px;
+  padding: 10px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .redes a img {
-    width: 2.5rem;
-    transition: transform 0.3s ease;
+  width: 2.5rem;
+  transition: transform 0.3s ease;
 }
 
 .redes a:hover {
-    background-color: #fffdfa;
-    transform: scale(1.1);
+  background-color: #fffdfa;
+  transform: scale(1.1);
 }
 
 .redes a:hover img {
-    transform: scale(1.3);
-}
-
-
-
-.redes_txt {
-    display: none;
+  transform: scale(1.3);
 }
 
 /*Mapa e endereço*/
 
 .end {
-    margin-right: 10%;
-    color: #fff;
-
+  width: 30%;
+  padding-top: 50px;
+  color: #fff;
 }
 
 .end iframe {
-    width: 30vw;
-    min-height: 25vh;
+  width: 30vw;
+  min-height: 25vh;
 }
 
 #endereco {
-    padding-top: 2rem;
-    font-size: 1.87rem;
-    cursor: pointer;
-   
-
+  padding-top: 2rem;
+  font-size: clamp(1.3rem, 2vw, 2.2rem);
+  cursor: pointer;
+  text-align: center;
 }
 
 #texto-end {
-    text-align: center;
-    font-size: 1rem;
-    
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 #popup {
-    font-size: 2rem;
-    padding: 5px;
-    background-color: green;
-    border-radius: 10px;
-    position: fixed;
-    align-items: center;
-    bottom: 35px;
-    right: 320px;
-    opacity: 0;
-    transition: 0.3s ease;
+  font-size: 2rem;
+  padding: 5px;
+  background-color: green;
+  border-radius: 10px;
+  width: 30%;
+  margin-left: 35%;
+  align-items: center;
+  text-align: center;
+  opacity: 0;
+  transition: 0.3s ease;
 }
 
 #popup.mostrar {
-    opacity: 1;
-    transition: 0.3s ease;
+  opacity: 1;
+  transition: 0.3s ease;
 }
-
-
-
-
-
 
 /*copyright*/
 .copy {
-    background-color: #000;
-    width: 100%;
-    text-align: center;
-    align-items: center;
-
+  background-color: #000;
+  width: 100%;
+  text-align: center;
+  align-items: center;
 }
 
 .copy p {
-    color: white;
-    font-size: 1.5rem;
-    padding: 10px;
+  color: white;
+  font-size: 1.5rem;
+  padding: 10px;
 }
 
 /*medias*/
@@ -339,229 +466,251 @@ footer {
   }
 }
 
-@media (max-width:1200px) and (min-width: 625px) {
-    .item-cardapio {
-        width: 95vw;
-    }
+@media (max-width: 1260px) and (min-width: 625px) {
+  .item-cardapio {
+    width: 80vw;
+    justify-content: center;
+  }
 
-    .item-cardapio img {
-        width: 25rem;
-        height: 20vh;
-    }
+  .item-cardapio img {
+    width: 25rem;
+    height: 20vh;
+  }
 
-    .cardapio-texto {
-        font-size: 2rem;
-        margin: 2rem 0;
-    }
+  .item-card-txt {
+    width: 55vw;
+    padding: 0;
+  }
 
-    .item-card-txt {
-        width: 55vw;
-        padding: 0;
-    }
+  .item-card-txt p {
+    margin-bottom: 0.5rem;
+    text-align: justify;
+    color: black;
+  }
+  #img-slide-container {
+    width: 720px;
+  }
+  
+  #prev-button {
+    margin: 0 2rem;
+    width: 3rem;
+    height: 3rem;
+  }
+  #next-button {
+    margin: 0 1rem;
+    width: 3rem;
+    height: 3rem;
+  }
 
-    .item-card-txt h3 {
-        font-size: clamp(1rem, 5vw, 3rem);
-        margin-bottom: 1rem;
-        color: black;
-    }
+  .slider-img {
+    scroll-snap-align: start;
+  }
+}
 
-    .item-card-txt p {
-        font-size: clamp(1rem, 2vw, 5rem);
-        margin-bottom: 0.5rem;
-        text-align: justify;
-        color: black;
-    }
-
-    .item-card-txt span {
-        font-size: 1.6rem;
-        color: black;
-    }
-
+@media (max-width: 843px) {
+  #img-slide-container {
+    width: 361px;
+  }
 }
 
 /*responsividade_mobile*/
 
 @media (max-width: 625px) {
-    header {
-        height: 15vh;
-    }
+  html {
+    scroll-padding-top: 95px;
+  }
 
-    .nave {
-        display: grid;
-        justify-content: center;
-        text-align: center;
-        height: 15vh;
+  header {
+    height: 12vh;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
 
-    }
+  .header-container {
+    height: 12vh;
+  }
 
-    .nave img {
-        width: 80px;
-    }
+  .header-container img {
+    width: 85px;
+    margin-left: 20px;
+  }
 
-    .logo_link,
-    .nave img,
-    nav ul,
-    nav a {
-        margin: 0;
-        padding: 0;
-    }
+  nav a {
+    display: none;
+  }
 
-    nav a {
+  .reserva_but {
+    display: flex;
+  }
 
-        padding-inline: 10px;
-        font-size: 1.7rem;
-    }
+  /*sobre - 625px*/
 
-    .sobre-container {
-        width: auto;
-        display: block;
-        padding: 3rem;
-        text-align: center;
-    }
+  .sobre-container {
+    display: block;
+    padding: 3rem;
+    text-align: center;
+  }
 
-    .sobre-img {
-        width: 90%;
-        padding: 0;
-        margin-bottom: 2rem;
-    }
+  .sobre-img {
+    width: 90%;
+    padding: 0;
+    margin-bottom: 2rem;
+  }
 
-    .sobre-texto,
-    .sobre-texto p {
-        margin: 0;
-        max-width: 100%;
-        text-align: center;
-    }
+  .sobre-texto,
+  .sobre-texto p {
+    margin: 0;
+    max-width: 100%;
+    text-align: center;
+  }
 
+  /*card - 625px*/
 
-    .item-cardapio {
-        display: flex;
-        width: 95vw;
-        flex-direction: row;
-        align-items: center;
-        margin: 20px auto;
-        padding-bottom: 45px;
-        gap: 10px;
-    }
+  .item-cardapio {
+    display: flex;
+    width: 95vw;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px auto;
+    gap: 10px;
+  }
 
+  .item-cardapio img {
+    width: 35vw;
+    height: 13rem;
+  }
 
-    .item-cardapio img {
-        width: 35vw;
-        height: 15vh;
-    }
+  .item-card-txt {
+    width: 55vw;
+    min-height: 1vh;
+    padding: 0;
+  }
 
+  .preco {
+    padding-top: 0rem;
+  }
 
-    .cardapio-texto {
-        font-size: 2rem;
-        margin: 2rem 0;
-    }
+  /*footer - 625px*/
 
-    .item-card-txt {
-        width: 55vw;
-        height: 15vh;
-        padding: 0;
-    }
+  .voimg {
+    display: none;
+  }
 
-    .item-card-txt h3 {
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-    }
+  .item_container {
+    display: grid;
+    text-align: center;
+    justify-content: center;
+  }
 
-    .item-card-txt p {
-        font-size: 1.4rem;
-        margin-bottom: 0.5rem;
-        text-align: justify;
-    }
+  .redes {
+    margin: 20px 0;
+  }
 
-    .item-card-txt span {
-        font-size: 1.6rem;
-        float: right;
-    }
+  .redes img {
+    width: 7vw;
+  }
 
-    .voimg {
-        display: none;
-    }
+  .end {
+    padding: 0;
+    width: 100%;
+  }
 
-    .item_cont {
-        display: grid;
-        text-align: center;
-        justify-content: center;
-    }
+  .end iframe {
+    width: auto;
+    height: auto;
+  }
 
-    .redes {
-        margin: 20px 0;
-    }
+  #img-slide-container {
+    width: 30rem;
+    height: 80%;
+  }
 
-    .redes img {
-        width: 7vw;
-    }
+  .slider-img {
+    width: 100%;
+    height: 100%;
+  }
 
-    .redes h2 {
-        font-size: 8vw;
-        margin-bottom: 20px;
-    }
+  #prev-button {
+    position: absolute;
+    margin-right: 31rem;
+    width: 3rem;
+    height: 3rem;
+  }
 
-    .redes span {
-        display: none;
-    }
+  #next-button {
+    position: absolute;
+    margin-left: 30rem;
+    width: 3rem;
+    height: 3rem;
+  }
 
-    .redes div {
-        display: flex;
-        justify-content: center;
-    }
+  /*#prev-button,
+  #next-button {
+    display: none;
+  }
 
-    .end {
-        margin: 0 0 20px;
-    }
+  #img-slide-container {
+    width: 70%;
+  }
 
-    .end iframe {
-        width: 70vw;
-        height: auto;
-    }
-
-    .end p {
-        font-size: 1.2rem;
-    }
-
-    .redes_txt {
-        display: flex;
-        font-size: 2.5rem;
-        margin-bottom: 10px;
-    }
+  .slider-img {
+    width: 70%;
+    height: 60%;
+  }*/
 }
 
 @media (max-width: 400px) {
-    .item-cardapio {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        width: 95vw;
-        margin: 10px auto;
-        gap: 10px;
-        padding: 10px;
-    }
+  .item-cardapio {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 95vw;
+    margin: 10px auto;
+    gap: 10px;
+    padding: 10px;
+  }
 
-    .item-cardapio img {
-        width: 40vw;
-        height: auto;
-        object-fit: cover;
-    }
+  .item-cardapio img {
+    width: 40vw;
+    height: auto;
+    object-fit: cover;
+  }
 
-    .item-card-txt {
-        width: 55vw;
-        padding: 0;
-    }
+  .item-card-txt {
+    width: 55vw;
+    padding: 0;
+  }
 
-    .item-card-txt h3 {
-        font-size: 1.3rem;
-        margin-bottom: 5px;
-    }
+  .item-card-txt h3 {
+    font-size: 1.3rem;
+    margin-bottom: 5px;
+  }
 
-    .item-card-txt p {
-        font-size: 1rem;
-        margin-bottom: 5px;
-    }
+  .item-card-txt p {
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
 
-    .item-card-txt span {
-        font-size: 1.1rem;
-    }
+  .item-card-txt span {
+    font-size: 1.1rem;
+  }
+
+  #img-slide-container {
+    width: 25rem;
+    height: 70%;
+  }
+  #prev-button {
+    position: absolute;
+    margin-right: 25rem;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  #next-button {
+    position: absolute;
+    margin-left: 25rem;
+    width: 3rem;
+    height: 3rem;
+  }
 }
