--- a/styles/mediasquery.css
+++ b/styles/mediasquery.css
@@ -50,6 +50,11 @@
   #img-slide-container {
     width: 361px;
   }
+
+  .slider-img:hover {
+    box-shadow: none;
+    transform: translateY(0px);
+  }
 }
 
 /*responsividade_mobile*/
@@ -130,6 +135,8 @@
     padding-top: 0rem;
   }
 
+    
+
   /*footer - 625px*/
 
   .voimg {
@@ -167,7 +174,7 @@
 
   .slider-img {
     width: 100%;
-    height: 70%;
+    height: 90%;
   }
 
   #prev-button {
@@ -195,11 +202,12 @@
     margin: 10px auto;
     gap: 10px;
     padding: 10px;
+    align-items: center;
   }
 
   .item-cardapio img {
     width: 40vw;
-    height: auto;
+    height: 100%;
     object-fit: cover;
   }
 
@@ -208,8 +216,8 @@
     padding: 0;
   }
 
-  .item-card-txt h3 {
-    font-size: 1.3rem;
+  .item-card-txt h1 {
+    font-size: clamp(1.2rem, 2vw, 1.8rem);
     margin-bottom: 5px;
   }
 
@@ -239,4 +247,6 @@
     width: 3rem;
     height: 3rem;
   }
+
+
 }
